# ChangeLog for dev-ruby/coffee-script-source
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/coffee-script-source/ChangeLog,v 1.23 2014/08/05 16:00:33 mrueg Exp $

  05 Aug 2014; Manuel Rüger <mrueg@gentoo.org>
  coffee-script-source-1.7.0-r1.ebuild, coffee-script-source-1.7.0.ebuild,
  coffee-script-source-1.7.1.ebuild:
  Remove trailing '.' from DESCRIPTION.

*coffee-script-source-1.7.1 (11 Jul 2014)

  11 Jul 2014; Hans de Graaff <graaff@gentoo.org>
  +coffee-script-source-1.7.1.ebuild:
  Version bump.

  21 May 2014; Manuel Rüger <mrueg@gentoo.org>
  coffee-script-source-1.7.0.ebuild:
  Remove ruby18 target.

*coffee-script-source-1.7.0-r1 (22 Apr 2014)

  22 Apr 2014; Hans de Graaff <graaff@gentoo.org>
  coffee-script-source-1.7.0.ebuild, +coffee-script-source-1.7.0-r1.ebuild:
  Add stable candidate without ruby21.

  22 Apr 2014; Hans de Graaff <graaff@gentoo.org>
  -coffee-script-source-1.6.3.ebuild:
  Cleanup.

*coffee-script-source-1.7.0 (05 Feb 2014)

  05 Feb 2014; Manuel Rüger <mrueg@gentoo.org>
  +coffee-script-source-1.7.0.ebuild:
  Version bump.

  28 Dec 2013; Hans de Graaff <graaff@gentoo.org>
  coffee-script-source-1.6.3.ebuild:
  Add ruby21.

  26 Aug 2013; Hans de Graaff <graaff@gentoo.org>
  coffee-script-source-1.6.3.ebuild:
  Fix HOMEPAGE.

  26 Aug 2013; Hans de Graaff <graaff@gentoo.org>
  -coffee-script-source-1.6.1.ebuild, -coffee-script-source-1.6.2.ebuild:
  Cleanup.

*coffee-script-source-1.6.3 (13 Jul 2013)

  13 Jul 2013; Hans de Graaff <graaff@gentoo.org>
  +coffee-script-source-1.6.3.ebuild:
  Version bump.

*coffee-script-source-1.6.2 (12 May 2013)

  12 May 2013; Hans de Graaff <graaff@gentoo.org>
  +coffee-script-source-1.6.2.ebuild:
  Version bump.

  30 Apr 2013; Hans de Graaff <graaff@gentoo.org>
  -coffee-script-source-1.3.3.ebuild, -coffee-script-source-1.4.0.ebuild,
  -coffee-script-source-1.5.0.ebuild:
  Cleanup.

*coffee-script-source-1.6.1 (05 Mar 2013)
