@@ -1,7 +1,27 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST coffee-script-source-1.7.0.gem 54272 SHA256 acae7508d3f8c8a39f681eab73a1e43d1c1a564e6580122884e049ae761d1157 SHA512 692c001d03feb938d333fb9d4adb504e4f72b0603baae570b0f479787b07cddcda5a90c17c2d83355f9754808af6cd890338d5302b8d915e3f33c1857b29ed7c WHIRLPOOL b959aaabfcc199ed848b8513e96bdbdbacc9f1b452dcce603785e7727264902f74645f8c82a96473ed9c2ceae8421b972753768fa452ed3991773003d55f1399
 DIST coffee-script-source-1.7.1.gem 54272 SHA256 509b3ed091e2cdaf09f23b4fe2c4137a7c3d3959af4f081ecc552a229ac8fa41 SHA512 86896054d2edcf00bd81827f00bea1d22973486bafb0b4dbcf09720727365b22ee756fcb5e92dd0bd8f5e84eca486540afe2459f28808976646afcaa0775e31f WHIRLPOOL 1628af327f509cce2773651925c58f8e7cc48c34018fe8a93e012383032779d82ebdb5f7236142c16ce98d3aea6371462d66dab66b1959bbae4975031640b34e
-EBUILD coffee-script-source-1.7.0-r1.ebuild 588 SHA256 2192b43138b32c70fb1e255d3c8290dccc193b3a456b6797a541a230ad1b47ef SHA512 030e84568e82efa93dfdb74cfb8ffce2d062b10db4bde79d6796a3a51896cbb27862c8894e8354b21eabd0abe2b6bf1b075e9fd44ab1838dd521abdc1ed18f51 WHIRLPOOL 197956ed12a30777c749980fe2e9ff21e4adf15c96c476233540630748b38f71812c544787c2227a1b62975b0693b55ae603addad14c49eacd5404902e02b91c
-EBUILD coffee-script-source-1.7.0.ebuild 578 SHA256 727f3f7d8bc118e03110cf232f9969e6a30c764151c9a05423e1a550d132fa52 SHA512 e6763c84a9abffa9ec53a1b0440c2650a949600726bbc5ecef80f9603507e46af2eebbcb55300e2785de518d3908794ce53b18ff5468033f082270e6e91e0461 WHIRLPOOL 2c40767fc7851291c12a3f327cfda57c72e9a52768469110fe0725e6def12d2a5d1ee25faa25f2c1d13f64001b8581c3b6fc762ce2b93c8ab2b5bf6364f9f26f
-EBUILD coffee-script-source-1.7.1.ebuild 585 SHA256 45fa3a7b1a6fda09d6a61af9f6140e84efc689260c8a9e1e0e119357d4fc60c1 SHA512 5fbd695ec1943dfb598a439f29cea90e40664da21ac56c5e4fe23e78ad3e9c9a70117ab220dced0bffbc435ab1e5a0372cec008cb932c21782738a7edb05bb1e WHIRLPOOL fa48e46384cae0c26bb6d9c4cd12d318f2f97b6d041054d9d26b4e697bc22f6809b8473c86f3d1aeecc882fb178d66eb9c1872bfc6e59bcc33805cd9f9cae7a1
-MISC ChangeLog 3637 SHA256 4bd7367ab1d03f432b537c3453488069aa378a1c4fd0744f276b9b9cf899fe53 SHA512 a7890f1afec8194d23e955ca430450b7898f04144fd9d0e5cf4891aec86a0d7561549c9768b1f46474c35a965e83ce7846b74ab34f8fecbb167304f5425e189c WHIRLPOOL 4340f9c19fb187f09478a7ce11586b62e525d03034fb1df3fc186dc01fbd78d71335a61ec8f11536e17c33f77923c1bdeea358cff2eb8fcc010990790b60e594
+EBUILD coffee-script-source-1.7.0-r1.ebuild 603 SHA256 c58d14fa743fa30c949d4a98b1b5cad0247ab1478971715e6de36f836e49ea39 SHA512 9f7a43b09d052c8538fb2b8beba71045269e7266310905fea4cc67a1ce28d2f46181ac157f913ffca4101f781ec49d5d4b1dbf58661979ad6c7a76c9690cd093 WHIRLPOOL 5c11762472805fadc554a7475d8b5a307976669406a3d85c8231eae16a9360e991477d40e6f6a0f5098ecb0181fd820b1c4e0e2285ff74de5ddebe838f1dddc9
+EBUILD coffee-script-source-1.7.0.ebuild 593 SHA256 a71120130b9f1c00a19a61c42ada4c5059d6cf8182623711b5583d284d4e75c5 SHA512 70ed4c1ed002fe8471ee12376319340296b07e446ea4faecb15ffb13fd9dd7ecd9b687a5c1fd9f77fbd4d132b175f585d7a3df1c187a9260774e981850f95578 WHIRLPOOL 047187ba73ba603ea74da1b39e513aa2352686984cda509e8096b9186da847866a27a240cc233c76eb336e4a5b5f84ab1a4c21164fb9166f428f277e853b9cd9
+EBUILD coffee-script-source-1.7.1.ebuild 600 SHA256 7dd03157b30cff564f7ff392da9d602e59b7b8b0e805bbb8cae005e0e04e9966 SHA512 a9e3633224efcf3c4bdc0d33f5bb0826eed40467ecdcee11b59571df4d9954cb4a6fe01e72e01052855d84c9673a7b20b4bb4f8d280a3a29bd2caf57437e8427 WHIRLPOOL 283a14257715d252fa84e34d2ea9bc7513cf42bce6ec7c25690a6362627218d3e55df3d4f6b651bec6c374c3a59267482a7850d4c856d548982724cfa9416649
+MISC ChangeLog 3847 SHA256 9607989ce37a26a9984a7122de0f4e219e486000448963bd508603a0998af459 SHA512 9e58c8a049bb36d8e7ae4f7fee8ecd8d7d77b49499b1018870232c24296b7450c3235b89984a03778a31e519283433659ae1e073a923706e31ab4573ad24bf44 WHIRLPOOL 104d2caef075cee59fc4f3153c8b1875648d6e90174514da603962157fe37549b0cd72dbb10e119397af2197c3149445c82b52e098d5f95e2c474df63fc6b749
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJT6mTJAAoJEJOE+m71LUu6ClwQAIrkfHVH/HmGinMUN+VkBTTr
+1+l/P6ovX/QRxoG+jRLJ2zkKvJc4SUmSDxE71GELzQCqjeDVCKYQ9hP4glSxGn8w
+cIjPwWlTFD+DLPMGDU9+Ya/bhUO+4C9/9VFW/XRHcBOXqMGOt7/xPUCp7AKmUlto
+MFOMgxDEn+jvqNi2nkbOdR7ahqDyHQqSJhrh8hMLe+okVgCaQ73EE1LZddTrGvCx
+pwA7eXBbBzDeZsZD7KTIGu3wIpQgtZt+Pzl/ckt7pU43XaEQhB0TpIsqmiGvDe5d
+R3ujRhOFV5sirifN6Tk8SVeIJwQqsKoOGmRWWi5KyFstXHER2lgB+sXKo3nFW9Tu
+ORmBgdL8FWpa/fDHaeSfFEIW7ld2sDsp1Z7zQKiLqligLd66+uJNJ95rwCvRjaK+
+I6XyHg3UE5MJPf0F3Mit0jWQZw5wQMMMRqLJOXsn6/+1KQ0oopOKG6rGOgB2Wi9o
+1PcHeti6tbuw9NmomCBzDPMXccO+7JLTjMqbYWvxo3wfqWMUoY0bVUthtWbqYprH
+MtRDhO14hU6oOPqscMFrx3B+4OJBZg1ZOYI8JBuULwR/ZhVWy/18mG6dIbzDT1uC
+yDl91+vQckym5DGg6JppQXUaXoa5moWWLuFI3tWZwEw9Y8dfD39yNmRZSvVj0HNV
+K5R8mSeMIB9xzs5D6yYV
+=ACNx
+-----END PGP SIGNATURE-----
