@@ -1,7 +1,27 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST hike-1.2.3.tgz 9010 SHA256 0dbb22f1596ec0a5261e454028ce36661b4185b4527bfd98c365495f03234833 SHA512 0d7a35c0f9b4f5f1f99d4b2b753244cb712ebc24cc54b366c60ac6094a2ec693df86443e0b4499358cdd4f6411347ad80e0fc90b5fb7f4dd9b627832b645adcd WHIRLPOOL daf6673ac9f57b50f663c66c083e93de3c31c792803799d0a98c630a89338a21c5c27f6e641f0e781f1dc53ebf667bb128397bca8ef0934e16ea3d7ad18a3d04
 DIST hike-2.1.2.tgz 9111 SHA256 599732124a5b5f0a67694c7e12d1f55480e1fb0e0846e6ffe952b7202b872ed9 SHA512 fc05b6ec5676d5b6d12273688b0f98cd01784e201947293c5af92c637adcd9cd788fa9a696d6439efcc9097e540160fb96133dffd85289e498042acce8ca0c97 WHIRLPOOL fb6b4f095aa02fc27f81c52daad1f18ad63f388931934b440a061fd68e2cbce8b8e53701e8d067ef5d6a82e50c4a156d30da8afd18b64db16009faee99dc9951
-EBUILD hike-1.2.3-r1.ebuild 821 SHA256 763b9f26333c2889af7fdd8b2d1c0ff2ae1c7dc34b843f999640bb95c8887554 SHA512 e000bb9426294e91458cc1b3524a96d45214843544e179272c331355ba4885fac2b6d2b84e53f1297a4599f4db6c721dd114650aa236b18239d2ca6f96629e0d WHIRLPOOL 77a3eae0a2a6c34f3275cd6cbd37ff7a97d31cf125d5781b819ead38fffc8a6105bbfe950a695e4a0cdd1473d771f35800e2f6b279e950e8bea94a1791d03d71
-EBUILD hike-1.2.3.ebuild 811 SHA256 cbcecbd74840dfe96fa7c8c1057d3b888f1ad404acc04b3eb4a635443e59ced7 SHA512 d7ab690a2e689db4a9980c86b845de69db91ce75cc427788fa84a7534105ebb111bdc9de48e14543e9551248c1f3e2522777bd9c6a5d592123dc544c43ac2504 WHIRLPOOL d587897ed71cc51780f0e5bfd9970febef93176e7c2fd8b3d92eef6a68c67ea4602e7b148bf82da22456991a1690950c9f77ee63f8487ddacae38299231adf41
-EBUILD hike-2.1.2.ebuild 806 SHA256 94e2a4407ee8c5ddacaab84c7f02fa05e5b1b2839edfe7886b89ac01d28776fa SHA512 44ffc8c2c0dd249c5cf44f484d2930193f29782a8bc9fb1622ffd4642e26b71ad48ca3575d7978a7a293f9a8fbca76b0c48fb04f31b1f114b03543bd83b8af1c WHIRLPOOL 6949081f603b6b8750bde81b3f3780f632e048485d3c07a1a7c68125796e5897bb1f7f78b541343571b6a419c9c14c2b6028e73263eb75e1245db0bb90f6e848
-MISC ChangeLog 1959 SHA256 ddc087e78d1a482259161e55635aeeaa19fb7a430130710e574ab4faecaf4d6a SHA512 55581802b8dcd9258efa279072c0e62ffa0b90d1c17104b5eca43d94a2477d4d5bdd99a1fe3edd487c9216d2e30871b90e6b0ba3b8a1a001518a1037e8488ec7 WHIRLPOOL a8dd8d3fbab9a4fd2a0e164eb5f8168cfb4345a5a0b32cd6e223f27bb9b153d0c2293b003ff196171674007d0a4e01cd3ca31461eab4acf64549d79563bd9356
+EBUILD hike-1.2.3-r1.ebuild 829 SHA256 f176d5df059a109407fb282be96b059693e2909472bb0b8e70d1eb6da392957a SHA512 a38c891c43c66e98340a16059dd1c9f052dc01ec665c0c54a602216a56c80cb83d87eafe3df9c8494cbee24ab55aa35ad5b6e233d3c688a80bdb513efec184a3 WHIRLPOOL b267e238f571f3e0bc0c0c1de99e74e0bf0cc53f33577dcc910d14ea57dfd381d7dbba8f54d675136170fce6e13942a17bbd1a750badcf9ed7c203744aad2719
+EBUILD hike-1.2.3.ebuild 819 SHA256 90216f793c1460b29c2a3ec2e31a5ed79cdecdad864c2461cb1dcf5fcdccbe6e SHA512 96cdd645c8903dfe7bb0b56e40a9cb82bd1536f9d1f4d9c8d78f342998894a708a918c81792451de37ea654151a268506f76ab7d520a11648e851e36b9891ef8 WHIRLPOOL 5f2228c463f0b997c1ec4d4a4b1a50d29c3d1d9568d309db86eefb9909313f4af799ba8656259ce468868d389f9f9a56951fd3d00a171d6cee78c4f97424879c
+EBUILD hike-2.1.2.ebuild 814 SHA256 4dca788f323931ed9016d17ba2caf3e96499d646ab190a54cc5a74d31da4d025 SHA512 bc1e0764fd53ddaaca6fe83226636d30ef6d8270b5e232d00049f2e53e0234bc8bbfff1f790085f09cda804d61345292ff10aca4664026c1046e63e2ac3903f8 WHIRLPOOL 87cffa977f0e4b23583d6c2841db7e632a7546a2545aea0c83544cf164aefe2c56d70931b94e75fb783a73c888d63a8f916964ab438289412ddbb5f0e3789d90
+MISC ChangeLog 2119 SHA256 d807773c1a8c8ddac932d3c48ecd78ff4bea7315fe9d40d4c4dd098345485863 SHA512 e6fbfc94c9fbf353608e4f8741d85cfdb2381b31d52e19a707a94dd1dd41f362ffc13ac18e872d15ac2a5f701b464376212d15d2d0f431c349661d8e9d6f65ab WHIRLPOOL bd5480f5deb4ffa52cd20ead2ac1a3e79b0f1db0f8c4a782f3669bb111291d1e6b836b7fc381d61a63ccfad14722348a7618a7e1fee559124c758a3c44a37a18
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJT6mPZAAoJEJOE+m71LUu6P5YP/3Z92QeTC/D9SAOqGIYwgzCG
+AQRhME2jeZvKxb+kPzjdjRlK/DOi6058GkK2PhWBcUV8VXWiJZwYU8cvhSbmKAp7
+jaijuyp19no5QLE2eLTsaBxYJm/W05d9/7TFjyyRZZt4GpRxl8TV3/4S+a1AmyGj
+XAM6zwCwmDKEvQVcDMt78BYW4zI3SyMTtrPpHeKB1UNV9ieWWjhvs4YVq2ZmZEIN
+HcTLJ5OlmKscX+SW8GLxei4AhIs7RC/+MtOBxjmfG5PGzwfI06gPZvQPXQE3bK6N
+Sf0LT/pWsU1YOD8XZHv1/5ioKwW7J7q0h0iItr82HXHG5sf/WNBO/sERTSp9kmfT
+xlvDrk0QAQgEXTYRM0ntH9psibAdjkLrMNE2pHjUTIw0JA/KKDm1Qc79Hf+zg6CP
+/dwDIrKjRA/nMCAIKe418qx8oLuiSp0ipz5ZKx8Bgck8dQuhPYzBrfoBBUweZ/kh
+GGNT8kctqoqwByG+qJC1ieq37x4vB95jKlSfV2ql6LySTjzqBaoAp7abVraIT7Ql
+c8TAdXXxBhCE0jx5QY8T64ISrOLkrqMove0IE2J83jxvBYLrqmVtI/7iyKl5ulAC
+jPOD/WgTJmZt359xfW1BOG/yDXwLggdpS98O53oUs80j6e9T+UcI4/gzo428GaIC
+qhhnXmikjsKZYKDS4Z+D
+=XPYN
+-----END PGP SIGNATURE-----
