@@ -1,5 +1,25 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX journey-1.0.4-fix-tests.patch 2149 SHA256 3d6a107d54bb0a17640e81769c163f928cf17fb181460c8df4e96e20215ea4a5 SHA512 d4b34ed92f131e6e17f4af6d9be5ec743b6950f86ee724d32be67fe88b378cd8998c6551e78d6dc7b72b2911afbb14ec8ddad3be414694b86c696a39513a2857 WHIRLPOOL 3688902264d25b3e49ee0ce0e356497e2569c6f795956e91ca272b9761c7732cb0d11c221b45277830835b663b906ec9ea5a70560bb444882897b54dbf13ca9e
 DIST journey-1.0.4.gem 28672 SHA256 7454b8612530784000fbb17ea2df749a71b70702a0ac8ebef4a1e7f05aecc10f SHA512 9e6a06da8b77f6efb9941c58f53254e8cf3a1ebb6f8261a66ef3fed9c21ff4e4a90567fee88507b8e2c1fecc0fbdf204a9d3c8473b671bbb4b8c6b9faa6f2a07 WHIRLPOOL 1fb1ff42d1cd401ad10dc22e8d705933d8ff5fc84f952e3fbf0e2ea77b0ecc4ac08280ee5e2bd23b3cbeb4729e23b2c5ca41f3ce49deb898033073dc7be418b1
-EBUILD journey-1.0.4-r1.ebuild 791 SHA256 5a927c44126c79ec8d7232efbd23ba375ae55517d74e0ff6fa39d94d2ba815f7 SHA512 781a4919d827ed4eae540bdaca223fc37c09f56b5f7fce118243fb90a713c5001cf44a2c77eaccfac07309c196261810d34d41757f864b80a62d9ddc072d28d2 WHIRLPOOL f76f26d32cccf622f3d95b2d52a7bc7000bdf02a507fcc8033e12ad2c88931b3a16beca2f14a5c0b50561633fbfbe8320a3692017e5c8a9e97a50a00483bf2a7
-MISC ChangeLog 1590 SHA256 c8da3241bcb8a6233ebc0f815e5c735ff5a0f6bf7c9a761a40db81e63d0476e3 SHA512 e6ba490bfac11d64e82cf193a07c757d5521d4240c454659a68e1bb1cf8af483d6cdf13aeb9f7f3826e3672d22c7fad242103eedc2a2145590b3ade93fbf6806 WHIRLPOOL ef7cad57d33e61fdc60b968b4f92bca786a7a85e281ba74309c31ff562fa5bc11fcdff21e0ff028bafc21e9a5a83a9bc8cd19d7f69f56d6f18fe83119459801d
+EBUILD journey-1.0.4-r1.ebuild 806 SHA256 5d51266889751328da00765e3d6f689b4db46efb7e480b4c3f4e2f18c100fd83 SHA512 ee8b356be56bdffbcfa710d60839e0b7c35b63cadadde0fbeea0bc1d7f952f036d3473f624c58c95f3ab8f2f219c3628fb1e7ed4d8e2483661e6fb7ba26c11d5 WHIRLPOOL b582f38da19ef3b96232d31b6aabe17531e1b76a006e91b174c07deed6a9974592cd4a498bb04c4676c7e43dcff6c68d960c2a0579ea748b4c49426e5607f0c3
+MISC ChangeLog 1713 SHA256 786b43112121a4d3c9566700da887ff1c602bc933ae19064152e5e27fec7d093 SHA512 6fefa7771d827f833ee8c4c671fde060a18dfa4a5f270d8e5f755a2600c342df31f657b037c9daeec9aaaaad75582b75d6ffe049291451449a95f70a4e3baab3 WHIRLPOOL 18ff95b6b345dc62656c47129b875b0763abc9d18ba5fdf0d0a108c90658dcda7e591bab9535c52fbb6c7c348f72dfa52e1e8611916cd07de9a65f224d93de13
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJT6mMQAAoJEJOE+m71LUu6/G4QAIMDpI/HM0H02Cb9qaKx2tDc
+qAynaRaC5iFF42UuLP8a4L2qjfY2l5j8jFnrPl6wT4G9iZkZ9Gtn+pJ12rAhcFUQ
+gqglrtmcK18V5jOF5Iyg0o4jpq8t404MRJhe+WC8r31fJrQos+Ai4JCYhD9e0gef
+ZK0CDv1J/fItRq6372tixMUzSzmPJR83hwEJvHc6Ds33mQAOIPae+3eiA01pQFzS
+3DO704vlZAK2P8ZkQArbSAybqKu2r9yRN4hZ8z3Jx9z95oImcgJl0nYQY//DjMzp
+a7O25QNi/QuY7J0Yxb0nscep7blHZXbJFYs+UsM67dsZNrNvSTHVNHV2tEd1BxeZ
+wyaJgtZd+Isyf3nQYTExgKsUkzw/e38rCjqpROq2Si2GOpEs2qLwahO4kUVItKya
+G/YxQAPEsJrS7iPQh6w+hXe89+rQYguhlpGLq/mJIkWCNhUh3pvB8cqVBy+G9K5q
+9iY4bTEt7VA4PO/jE5LaZml7Kkk9lbyK8drds/RzhhtfKLuhx+ea3nCBL1EGhuO1
+GVr3e3p4ME/tZ9dN/uA+2jS+hBV6Nfab1oFOPRQl9iakjUgPdNBA/fhEBgH9PZ9K
+7Aq+Hp1zqvKnzIJQu2qXz1ej8+KtaGkBs2wWwYH6kODL3Ta2IJwTSJHNA37hVMqU
+1cUFMTX4P5s986/oxJ+b
+=9mYo
+-----END PGP SIGNATURE-----
