@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/hike
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hike/ChangeLog,v 1.15 2014/08/05 16:00:57 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hike/ChangeLog,v 1.16 2014/08/12 18:56:24 blueness Exp $
+
+  12 Aug 2014; Anthony G. Basile <blueness@gentoo.org> hike-1.2.3-r1.ebuild,
+  hike-1.2.3.ebuild, hike-2.1.2.ebuild:
+  Keyword ~ppc and ~ppc64, bug #519170
 
   05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> hike-1.2.3-r1.ebuild,
   hike-1.2.3.ebuild, hike-2.1.2.ebuild:
