@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/journey
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/journey/ChangeLog,v 1.11 2014/08/05 16:00:56 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/journey/ChangeLog,v 1.12 2014/08/12 18:53:02 blueness Exp $
+
+  12 Aug 2014; Anthony G. Basile <blueness@gentoo.org> journey-1.0.4-r1.ebuild:
+  Keyword ~ppc and ~ppc64, bug #519170
 
   05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> journey-1.0.4-r1.ebuild:
   Remove trailing '.' from DESCRIPTION.
