@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/coffee-script-source
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/coffee-script-source/ChangeLog,v 1.23 2014/08/05 16:00:33 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/coffee-script-source/ChangeLog,v 1.24 2014/08/12 19:00:25 blueness Exp $
+
+  12 Aug 2014; Anthony G. Basile <blueness@gentoo.org>
+  coffee-script-source-1.7.0-r1.ebuild, coffee-script-source-1.7.0.ebuild,
+  coffee-script-source-1.7.1.ebuild:
+  Keyword ~ppc and ~ppc64, bug #519170
 
   05 Aug 2014; Manuel Rüger <mrueg@gentoo.org>
   coffee-script-source-1.7.0-r1.ebuild, coffee-script-source-1.7.0.ebuild,
